# lz4r

./: .gitignore  Cargo.toml  README.md  architecture-guide.md  benchmark-results.md  build.rs  codecov.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
benches/: block.rs  corpus.rs  frame.rs  hc.rs
docs/: benchmark-results.md  developer-guide.md  migration-summary.md
e2e/: block_oneshot.rs  block_streaming.rs  cli_integration.rs  error_handling.rs  file_api.rs  frame_oneshot.rs  frame_streaming.rs  hc_api.rs  interop.rs  io_engine.rs  legacy_format.rs  suite_06_README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_roundtrip.rs  decompress_block_arbitrary.rs  decompress_frame_arbitrary.rs  frame_roundtrip.rs
migration/: api-reference.md  decision-log.md  known-issues.md
scripts/: bench_compare.sh  fuzz_ci.sh
src/: abi.rs  config.rs  file.rs  io.rs  lib.rs  lorem.rs  main.rs  threadpool.rs  timefn.rs  xxhash.rs
src/bench/: bench_mem.rs  compress_strategy.rs  config.rs  decompress_binding.rs  mod.rs  runner.rs
src/block/: compress.rs  decompress_api.rs  decompress_core.rs  mod.rs  stream.rs  types.rs
src/cli/: arg_utils.rs  args.rs  constants.rs  help.rs  init.rs  mod.rs  op_mode.rs
src/frame/: cdict.rs  compress.rs  decompress.rs  header.rs  mod.rs  types.rs
src/hc/: api.rs  compress_hc.rs  dispatch.rs  encode.rs  lz4mid.rs  mod.rs  search.rs  types.rs
src/io/: compress_frame.rs  compress_legacy.rs  compress_mt.rs  decompress_dispatch.rs  decompress_frame.rs  decompress_legacy.rs  decompress_resources.rs  file_info.rs  file_io.rs  prefs.rs  sparse.rs
src/util/: cores.rs  file_list.rs  file_size.rs  file_status.rs  mod.rs
tests/: bench.rs  block.rs  block_compress.rs  block_stream.rs  block_types.rs  cli.rs  crate_setup.rs  e2e_block_oneshot.rs  e2e_file_api.rs  e2e_frame_streaming.rs  e2e_hc_api.rs  file.rs  file_api.rs  frame.rs  frame_header.rs  hc.rs  hc_compress.rs  hc_lz4mid.rs  hc_search.rs  io.rs  lib_api.rs  lorem.rs  platform_config.rs  threadpool.rs  timefn.rs  util.rs  xxhash.rs
tests/bench/: api.rs  compress_strategy.rs  config.rs  decompress_binding.rs  mem.rs  runner.rs
tests/block/: compress.rs  decompress_api.rs  decompress_core.rs  stream.rs  types.rs
tests/cli/: arg_utils.rs  args.rs  constants.rs  dispatch.rs  help.rs  init.rs  op_mode.rs
tests/frame/: cdict.rs  compress.rs  decompress.rs  header.rs  oneshot.rs  types.rs
tests/hc/: api.rs  compress.rs  dispatch.rs  encode.rs  lz4mid.rs  search.rs  types.rs
tests/io/: api.rs  compress_frame.rs  compress_legacy.rs  compress_mt.rs  decompress_dispatch.rs  decompress_frame.rs  decompress_legacy.rs  decompress_resources.rs  file_info.rs  file_io.rs  prefs.rs  sparse.rs
tests/util/: api.rs  cores.rs  file_list.rs  file_size.rs  file_status.rs
