[package]
name = "lz4-programs"
version = "1.10.0"
edition = "2021"
description = "LZ4 CLI programs — Rust port of lz4-1.10.0/programs"
license = "GPL-2.0-only"
repository = "https://github.com/jafreck/Lz4r"
homepage = "https://github.com/jafreck/Lz4r"
documentation = "https://docs.rs/lz4-programs"
readme = "README.md"
keywords = ["lz4", "compression", "decompression", "codec"]
categories = ["compression", "encoding"]
exclude = ["migration/", "fuzz/", "docs/", "scripts/"]

[[bin]]
name = "lz4"
path = "src/main.rs"

[lib]
name = "lz4"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]   # rlib = existing Rust usage; staticlib = C ABI

[features]
# Enable multi-threaded compression (corresponds to LZ4IO_MULTITHREAD in lz4conf.h).
# On Windows the C source enables this by default; in Rust it is opt-in via feature flag.
multithread = []
# Enable recursive directory traversal (corresponds to UTIL_ENABLE_RECURSIVE_SEARCH in lz4cli.c).
recursive = []
# Attempt to raise process scheduling priority via setpriority() during benchmarking.
# Corresponds to SET_REALTIME_PRIORITY in platform.h.  Requires appropriate OS privileges.
realtime-priority = []
# Export the four C-ABI symbols (LZ4_compress_default, LZ4_compress_fast,
# LZ4_decompress_safe, LZ4_compress_HC) so lzbench can link the Rust staticlib
# in place of the two C object files it normally uses.
c-abi = []

[dependencies]
libc = "0.2"
rayon = "1"
walkdir = "2"
filetime = "0.2"
nix = { version = "0.31", features = ["fs", "process", "resource", "user"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
num_cpus = "1"
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "minwindef", "ioapiset", "winioctl", "winnt"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "block"
harness = false

[[bench]]
name = "frame"
harness = false

[[bench]]
name = "hc"
harness = false

[[test]]
name = "e2e_frame_oneshot"
path = "e2e/frame_oneshot.rs"

[[test]]
name = "e2e_frame_streaming"
path = "e2e/frame_streaming.rs"

[[test]]
name = "e2e_file_api"
path = "e2e/file_api.rs"

[[test]]
name = "e2e_io_engine"
path = "e2e/io_engine.rs"

[[test]]
name = "e2e_cli_integration"
path = "e2e/cli_integration.rs"

[[test]]
name = "e2e_legacy_format"
path = "e2e/legacy_format.rs"

[[test]]
name = "e2e_block_oneshot"
path = "e2e/block_oneshot.rs"

[[test]]
name = "e2e_block_streaming"
path = "e2e/block_streaming.rs"

[[test]]
name = "e2e_hc_api"
path = "e2e/hc_api.rs"

[[test]]
name = "e2e_error_handling"
path = "e2e/error_handling.rs"

[[test]]
name = "e2e_interop"
path = "e2e/interop.rs"
